--- a/SPMDemo/SPMDemo.xcodeproj/xcshareddata/xcschemes/SPMDemo.xcscheme
+++ b/SPMDemo/SPMDemo.xcodeproj/xcshareddata/xcschemes/SPMDemo.xcscheme
@@ -101,7 +101,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;#- -- SCRIPT BEGIN - --&#10;# SKIP_SIMULATOR_BUILDS=1&#10;  SCRIPT_SRC=$(find &quot;$BUILT_PRODUCTS_DIR&quot; -name &apos;Instabug_dsym_upload.sh&apos; | head -1)&#10;  if [ ! &quot;${SCRIPT_SRC}&quot; ]; then&#10;    echo &quot;Instabug: err: script not found. Make sure that you&apos;re including InstabugResources.bundle in your project directory&quot;&#10;    exit 1&#10;  fi&#10;  # APP_TOKEN=&quot;YOUR-APP-TOKEN-HERE&quot;&#10;  source &quot;${SCRIPT_SRC}&quot;&#10;#- -- SCRIPT END - --&#10;">
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;#- -- SCRIPT BEGIN - --&#10;# SKIP_SIMULATOR_BUILDS=1&#10;  SCRIPT_SRC=$(find &quot;$BUILT_PRODUCTS_DIR&quot; -name &apos;Instabug_dsym_upload.sh&apos; | head -1)&#10;  if [ ! &quot;${SCRIPT_SRC}&quot; ]; then&#10;    echo &quot;Instabug: err: script not found. Make sure that you&apos;re including InstabugResources.bundle in your project directory&quot;&#10;    exit 1&#10;  fi&#10;    APP_TOKEN=&quot;d824b0efb5573e97ac7c03fb03d2d0a3&quot;&#10;  source &quot;${SCRIPT_SRC}&quot;&#10;#- -- SCRIPT END - --&#10;">
             </ActionContent>
          </ExecutionAction>
       </PostActions>
